syntax = "proto3";
package pb;
option go_package = "./";
service UserService {
    rpc UserRegister (RegisterReq) returns (RegisterOrLoginInfoResp); //用户注册的信息
    rpc UserLogin (LoginReq) returns (RegisterOrLoginInfoResp); //用户的详情信息
    rpc UserDetail (DetailRep) returns (UserDetailResp); //查询用户的详情信息
}
// 用户注册的信息
message RegisterReq {
    string username = 1; // 登录用户名
    string password = 2; // 登录密码
}

//用户登录的信息
message LoginReq {
    string username = 1; // 登录用户名
    string password = 2; // 登录密码
}

//注册或者登录后返回的结果
message RegisterOrLoginInfoResp {
    int32 status_code = 1; // 状态码，0-成功，其他值-失败
    string status_msg = 2; // 返回状态描述
    int64 user_id = 3; // 用户id
    string token = 4; // 用户鉴权token
}

//查询用户的详情的请求参数
message DetailRep {
    string user_id = 1; // 登录用户名
    string token = 2; // 登录密码
}

//用户的详情信息
message UserDetailResp {
     int32 status_code = 1; // 状态码，0-成功，其他值-失败
     string status_msg = 2; // 返回状态描述
     User user = 3; // 用户信息
}

message User {
     int64 id = 1; // 用户id
     string name = 2; // 用户名称
     int64 follow_count = 3; // 关注总数
     int64 follower_count = 4; // 粉丝总数
     bool is_follow = 5; // true-已关注，false-未关注
     string avatar = 6; //用户头像
     string background_image = 7; //用户个人页顶部大图
     string signature = 8; //个人简介
     int64 total_favorited = 9; //获赞数量
     int64 work_count = 10; //作品数量
     int64 favorite_count = 11; //点赞数量
}